# databricks-code-repo

./: 1_Explore_Notebooks_magic_commands.ipynb  1_Usecase_Explore_Notebooks_magic_commands.ipynb  3_read_write_usecases.ipynb  4_child_nb_dataload.ipynb  4_child_notebook.py  README.md  Very very Important Define Schema.ipynb  my_first_notebook.ipynb
Usecases/: 1_Explore_Notebooks_magic_commands.ipynb  4_child_nb_dataload.ipynb  4_child_nb_hollywood_dataload.ipynb  Basic WriteOps.ipynb  Parquet files extract and transform.ipynb
Usecases/4_logistics_usecase/: BB2_Usecase2_DSL_SQL.ipynb  BB2_Usecase2_DSL_SQL_Framework.ipynb  business_specific_generic_function_fw_nb.ipynb  generic_functions_nb1.ipynb  main_etl_nb1.ipynb  main_etl_nb_medallion_generic_fw_bronze_load_nb2.ipynb  main_etl_nb_medallion_generic_fw_silver_load_nb3.ipynb
Usecases/4_logistics_usecase My Work/: BB2_Usecase2_DSL_SQL.ipynb
Usecases/databricks-code-repo/: 1_Usecase_Explore_Notebooks_magic_commands.ipynb  2_Usecase_md_dbutils_widgets.ipynb  3_Usecase_dbutils_widgets.ipynb  4_child_notebook.py
dabprojectWE47/: README.md  databricks.yml  pyproject.toml
dabprojectWE47/resources/: sample_job.job.yml
dabprojectWE47/src/: sample_notebook.ipynb
dabprojectWE47/src/dabprojectWE47/: main.py
dabprojectWE47/tests/: sample_taxis_test.py
dea-course-v2/dea03-etl-with-apache-spark/: 01. Set-up Project Environment.sql  02. Extract Customers Data - JSON.sql  03. Extract Orders Data - Complex JSON as Text.sql  04. Extract Memberships Data - Images.sql  (+8 more)
we47_local_notebooks/: my_first_notebook.ipynb
(+63 files in other folders)
